--- a/action.yml
+++ b/action.yml
@@ -8,5 +8,6 @@ runs:
       if: ${{ runner.arch == 'ARM64' }}
       working-directory: ${{ github.action_path }}
       run: |
+        apk add libstdc++
         cp libgcompat.so.0 ld-linux-aarch64.so.1 /lib/
         sed -i "s:ID=alpine:ID=NotpineForGHA:" /etc/os-release
